--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -805,7 +805,7 @@
 	"func-it-recruiter": "IT-Recruiter",
 	"func-it-security": "IT-Sicherheit",
 	"func-java-dev": "Java-Entwickler",
-	"func-network-admin": "Netzwerkadministrator",
+	"func-network-admin": "DevOps / SysOps",
 	"func-pmo": "Projektmanager",
 	"func-scrum-master": "Scrum Master",
 	"func-software-architect": "Softwarearchitekt",
