--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -805,7 +805,7 @@
 	"func-it-recruiter": "Reclutador de TI",
 	"func-it-security": "Seguridad informatica",
 	"func-java-dev": "Desarrollador Java",
-	"func-network-admin": "Administrador de red",
+	"func-network-admin": "DevOps / SysOps",
 	"func-pmo": "Gerente de proyecto",
 	"func-scrum-master": "Maestro Scrum",
 	"func-software-architect": "Arquitecto de software",
