--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -805,7 +805,7 @@
 	"func-it-recruiter": "Recruteur informatique",
 	"func-it-security": "Sécurité informatique",
 	"func-java-dev": "Développeur Java",
-	"func-network-admin": "Administrateur réseau",
+	"func-network-admin": "DevOps / SysOps",
 	"func-pmo": "Chef de projet",
 	"func-scrum-master": "Scrum Master",
 	"func-software-architect": "Architecte logiciel",
