--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -805,7 +805,7 @@
 	"func-it-recruiter": "Reclutatore informatico",
 	"func-it-security": "Sicurezza informatica",
 	"func-java-dev": "Sviluppatore Java",
-	"func-network-admin": "Amministratore di rete",
+	"func-network-admin": "DevOps / SysOps",
 	"func-pmo": "Responsabile del progetto",
 	"func-scrum-master": "Maestro di Scrum",
 	"func-software-architect": "Architetto del software",
