--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -805,7 +805,7 @@
 	"func-it-recruiter": "IT-recruiter",
 	"func-it-security": "IT beveiliging",
 	"func-java-dev": "Java-ontwikkelaar",
-	"func-network-admin": "Netwerkadministrator",
+	"func-network-admin": "DevOps / SysOps",
 	"func-pmo": "Projectleider",
 	"func-scrum-master": "Scrum Master",
 	"func-software-architect": "Software architect",
