--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -805,7 +805,7 @@
 	"func-it-recruiter": "IT Recruiter",
 	"func-it-security": "IT Security",
 	"func-java-dev": "Java Developer",
-	"func-network-admin": "Network Administrator",
+	"func-network-admin": "DevOps / SysOps",
 	"func-pmo": "Project Manager",
 	"func-scrum-master": "Scrum Master",
 	"func-software-architect": "Software Architect",
